--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     background: url(./img/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg) no-repeat center center fixed;
     background-color: hsl(214, 34%, 13%);
 /*     background-size: cover; */
+    -webkit-animation: zoom linear view();
+    -moz-animation: zoom linear view();
+    -o-animation: zoom linear view();
+    -ms-animation: zoom linear view();
     animation: zoom linear;
     animation-timeline: view();
 }
@@ -51,6 +55,10 @@ body {
 
 .one > p, .two > p, .three > p, .four > p, .one > .zoom-in__button, .two > .zoom-in__button, .three > .zoom-in__button, .four > .zoom-in__button {
     position: absolute;
+    -webkit-animation: zoom linear view();
+    -moz-animation: fade linear view();
+    -o-animation: fade linear view();
+    -ms-animation: fade linear view();
     animation: fade linear;
     animation-timeline: view();
 }
@@ -102,10 +110,87 @@ body {
 .four > .zoom-in__button {
     top: 70%;
     left: 40%;
+    -webkit-animation: fade_last linear view();
+    -moz-animation: fade_last linear view();
+    -o-animation: fade_last linear view();
+    -ms-animation: fade_last linear view();
     animation: fade_last linear;
     animation-timeline: view();
     animation-range: -50vh 50%;
     transform: translate(-50%, -50%);
+}
+
+@-webkit-keyframes zoom {
+    0%,25% {
+        background-size: 300%;
+        background-position: center;
+    }
+    33% {
+        background-size: 400%;
+        background-position: right center;
+    }
+    66% {
+        background-size: 400%;
+        background-position: 40% center;
+    }
+    100% {
+        background-size: 600%;
+        background-position: top center;
+    }
+}
+@-moz-keyframes zoom {
+    0%,25% {
+        background-size: 300%;
+        background-position: center;
+    }
+    33% {
+        background-size: 400%;
+        background-position: right center;
+    }
+    66% {
+        background-size: 400%;
+        background-position: 40% center;
+    }
+    100% {
+        background-size: 600%;
+        background-position: top center;
+    }
+}
+@-o-keyframes zoom {
+    0%,25% {
+        background-size: 300%;
+        background-position: center;
+    }
+    33% {
+        background-size: 400%;
+        background-position: right center;
+    }
+    66% {
+        background-size: 400%;
+        background-position: 40% center;
+    }
+    100% {
+        background-size: 600%;
+        background-position: top center;
+    }
+}
+@-ms-keyframes zoom {
+    0%,25% {
+        background-size: 300%;
+        background-position: center;
+    }
+    33% {
+        background-size: 400%;
+        background-position: right center;
+    }
+    66% {
+        background-size: 400%;
+        background-position: 40% center;
+    }
+    100% {
+        background-size: 600%;
+        background-position: top center;
+    }
 }
 
 @keyframes zoom {
@@ -127,6 +212,51 @@ body {
     }
 }
 
+@-webkit-keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@-moz-keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@-o-keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@-ms-keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 @keyframes fade {
     0% {
         opacity: 0;
@@ -136,6 +266,39 @@ body {
     }
     100% {
         opacity: 0;
+    }
+}
+
+@-webkit-keyframes fade_last {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@-moz-keyframes fade_last {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@-o-keyframes fade_last {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@-ms-keyframes fade_last {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
 
@@ -166,6 +329,39 @@ body {
         left: 35%;
     }
 
+    @-webkit-keyframes zoom {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    @-moz-keyframes zoom {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    @-o-keyframes zoom {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    @-ms-keyframes zoom {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    
     @keyframes zoom {
         0%,25% {
             background-size: 100%;
